--- a/hedge_lords_ui/package.json
+++ b/hedge_lords_ui/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.7",
+    "apexcharts": "^4.5.0",
     "highcharts": "^12.1.2",
     "highcharts-angular": "^4.0.1",
     "lightweight-charts": "^5.0.3",
+    "ng-apexcharts": "^1.15.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.7",
